--- a/examples/notebooks/metric_learning_config.yaml
+++ b/examples/notebooks/metric_learning_config.yaml
@@ -1,20 +1,21 @@
-input_dir: /global/cfs/cdirs/m3443/data/PowerWeek
+input_dir: /global/cfs/cdirs/m3443/data/PowerWeek/train/train/
 project: PowerWeek_MetricLearning
 
-data_split: [80, 10, 10]
-input_features: 4
+data_split: [200, 10, 10]
+input_features: 5
 emb_hidden: 512
-emb_dim: 14
+emb_dim: 12
 nb_layer: 4
 activation: Tanh
 
-knn: 300
+knn: 500
 radius: 0.1
 margin: 0.1
 
 positive_weight: 1.0
-warmup: 100
-lr: 0.0001
-patience: 200
+warmup: 10
+lr: 0.1
+patience: 10
 max_epochs: 10
-factor: 0.5
+factor: 0.8
+energy_weighting: True
