Clean member classification notebook

--- a/examples/notebooks/member_classification.yaml
+++ b/examples/notebooks/member_classification.yaml
@@ -1,16 +1,18 @@
 input_dir: /global/cfs/cdirs/m3443/data/PowerWeek/train/train/
 project: PowerWeek_MemberClassification
+checkpoint_dir: /global/cfs/cdirs/m3443/data/PowerWeek/checkpoints/
 
-data_split: [100, 100, 10]
-input_features: 8
+data_split: [2000, 10, 10]
+batch_size: 20
+input_features: 12
 emb_hidden: 1024
 nb_layer: 4
 activation: ReLU
 
-positive_weight: 1.0
-warmup: 5
+warmup: 10
 lr: 0.01
-patience: 3
+patience: 30
 max_epochs: 10
-factor: 0.8
-energy_weighting: True
+factor: 0.7
+# num_seeds_ratio: 0.05
+num_seeds: 40
