--- a/examples/notebooks/member_gnn.yaml
+++ b/examples/notebooks/member_gnn.yaml
@@ -1,18 +1,20 @@
 input_dir: /global/cfs/cdirs/m3443/data/PowerWeek/train/train/
-project: PowerWeek_MemberClassification
+project: PowerWeek_MemberGNN
 checkpoint_dir: /global/cfs/cdirs/m3443/data/PowerWeek/checkpoints/
 
-data_split: [1000, 1000, 10]
-batch_size: 20
-input_features: 12
-emb_hidden: 1024
-nb_layer: 4
+data_split: [2000, 1000, 10]
+batch_size: 10
+input_features: 6
+emb_hidden: 256
+nb_layer: 3
+gnn_layers: 2
 activation: ReLU
 
-warmup: 10
-lr: 0.01
-patience: 20
+warmup: 20
+lr: 0.0001
+weight: 1
+patience: 30
 max_epochs: 10
 factor: 0.7
 # num_seeds_ratio: 0.05
-num_seeds: 80
+num_seeds: 40
